--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="Combo.png" alt="O Combo+ é a junçãpo do Alura+ e o Alura Língua">
+    <section/>
 </body>
 </html>
