--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Alura Plus</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+<title>Alura Plus</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width-device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="principal">
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="Combo.png" alt="O Combo+ é a junçãpo do Alura+ e o Alura Língua">
-    <section/>
+<section class="principal">
+<h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+<img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua">
+<a href="www.alura.com.br&quot; class="principal-botao">Assine por 12x de R$ 120,00*</a>
+<a href="www.alura.com.br&quot; class="principal-botao-2">Assinar somente o Alura</a>
+<p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
+</section>
 </body>
 </html>
