--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width-device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
 </head>
 <body>
 <section class="principal">
-    <div class="principal-caixa">
-     <h1 class="principal-titulo">Com o Combo+, vocễ pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-     
-<h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua">
+<div class="principal-caixa">
+<h1 class="principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+<img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
 <a href="www.alura.com.br&quot; class="principal-botao">Assine por 12x de R$ 120,00*</a>
 <a href="www.alura.com.br&quot; class="principal-botao-2">Assinar somente o Alura</a>
 <p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
-    </div>
+</div>
 </section>
 </body>
 </html>
