--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
 <p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
 </div>
 </section>
+
+<section cass="secundaria">
+    <img src="Plataformas.png" atl="Um monitor e um celular com a alura plus aberto">
+    <div class="secundaria-caixa">
+        <h2 class="secundaria-titulo">Assista do seu jeito
+            <p class="secundaria-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </h2>
+    </div>
+</section>
 </body>
 </html>
