--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 </section>
 
-<section cass="secundaria">
+<section class="secundaria">
     <img src="Plataformas.png" atl="Um monitor e um celular com a alura plus aberto">
     <div class="secundaria-caixa">
         <h2 class="secundaria-titulo">Assista do seu jeito
@@ -29,7 +29,7 @@
     </div>
 </section>
 
-<section> class="secundaria">
+<section class="secundaria">
     <div class="secundaria-caixa">
         <p class="secundaria-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
         <a href="www.alura.com.br" class="pricipal-botao secundaria-botao">Assine o Combo+</a>
