--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="secundaria">
     <div class="secundaria-caixa">
         <p class="secundaria-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-        <a href="www.alura.com.br" class="pricipal-botao secundaria-botao">Assine o Combo+</a>
+        <a href="www.alura.com.br" class="principal-botao secundaria-botao">Assine o Combo+</a>
     </div>
     <img src="Telas.png" alt="Tela da Alura plus e do Alura Língua">
 </section>
