--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Alura Plus</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width-device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
+    <title>Alura Plus</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<section class="principal">
-<div class="principal-caixa">
-<h1 class="principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
+    <section class="principal">
+        <div class="principal-caixa">
+        <h1 class="principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
 <a href="www.alura.com.br" class="principal-botao">Assine por 12x de R$ 120,00*</a>
-<a href="www.alura.com.br" class="principal-botao-2">Assinar somente o Alura</a>
-<p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
+<a href="www.alura.com.br" class="principal-botao-2">Asinar somente o Alura</a>
+<p class="principal-avio">*O preço pode variar caso a assinatura seja feita em outros planos</p>
 </div>
-</section>
+    </section>
 
-<section class="secundaria">
-    <img src="Plataformas.png" atl="Um monitor e um celular com a alura plus aberto">
-    <div class="secundaria-caixa">
-        <h2 class="secundaria-titulo">Assista do seu jeito
+    <section class="secundaria">
+        <img src="Plataformas.png" alt="um monitor e um celular com o alura plus aberto" class="secundaria-imagem">
+        <div class="secundaria-caixa">
+            <h2 class="secundaria-titulo">Assista do seu jeito</h2>
             <p class="secundaria-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
-        </h2>
-    </div>
-</section>
-
-<section class="secundaria">
-    <div class="secundaria-caixa">
-        <p class="secundaria-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-        <a href="www.alura.com.br" class="principal-botao secundaria-botao">Assine o Combo+</a>
-    </div>
-    <img src="Telas.png" alt="Tela da Alura plus e do Alura Língua">
-</section>
-
+        </div>
+    </section>
+    <section class="secundaria">
+        <div class="secundaria-caixa">
+            <p class="secundaria-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br" class="principal-botao secundaria-botao">Assine o Combo+</a>
+        </div>
+        <img src="Telas.png" alt="Tela da Alura plus e do Alura Lígua">
+    </section>
+    
 </body>
 </html>
