--- a/index.html
+++ b/index.html
@@ -42,5 +42,22 @@
         </div>
     </section>
     
+    <section class="dispositivos">
+        <h2 class="dispositivos-titulo">Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos-lista">
+            <li>
+            <img src="tv.png" alt="ícone de tv">
+            <h3 class="lista-item">TV</h3>
+            </li>
+            <li>
+                <img src="computador.png" alt="ícone de computador">
+                <h3 class="lista-item">Computadores</h3>
+            </li>
+            <li>
+                <img src="celular.png" alt="ícone de celular">
+            <h3 class="lista-item">Celulares e tablets</h3>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
